# cpp_actors

./: .gitignore  README.md
src/: CMakeLists.txt  main.cpp
src/actors/: Actor.h  ActorContext.cpp  ActorContext.h  IActorRef.h
